@@ -14,7 +14,7 @@ public:
 private:
 	void paintEvent(QPaintEvent *);
 
-	void start(bool v = false);
+	void start(bool v = false, bool dontCheckRegion = false);
 	void stop();
 
 	QVector< float > spectrumData;
