@@ -15,7 +15,7 @@ private:
 	void paintEvent(QPaintEvent *);
 	void resizeEvent(QResizeEvent *);
 
-	void start(bool v = false);
+	void start(bool v = false, bool dontCheckRegion = false);
 	void stop();
 
 	QByteArray soundData;
